LIST OF CHANGES

 - Removed samplesheet daemon definition, which is no longer used.

release 92.0.0
 - Create 'primer_panel' alias for the 'gbs_plex_name' methods in
   st::api::lims. The new accessor will be used in contexts that are outside
   of processing GBS runs.
 - Remove the API wrapping around tracking XML API.
   This API has not been used in production for a long time. The part of it
   that links run id and batch id (npg::api::run) was used in tests. Tests
   are amended either to use samplesheets is a source of LIMS data or, where
   they are still using XML LIMS driver for st::api::lims, batch id is used
   explicitly.
   st::api::lims::xml previously had dependency on npg::api::run to allow          
   for retrieval of batch_id from run XML API in cases where it was not            
   supplied explicitly. This dependency is removed without changing the            
   public interface of the class. Formally speaking, the batch_id                  
   attribute remains optional for creating an instance of the class.               
   However, failure to supply it will result in an error when trying to            
   access batch XML API of the LIMS system.
 - Remove code for sending run status events to LIMS, this functionality is
   no longer required.
 - Remove st::api::event class, which is no longer used.
 - Stop generating XML output from the tracking server. Remove all templates
   for generating XML output, all associated code in views, tests and test
   data.

release 91.15.0
 - Remove status daemon. This daemon is no longer run since the pipeline
   updates run and lane statuses by writing directly to the database. 
   Remove the script, npg_status_watcher, for detecting run status JSON
   files in run folders and updating database run and lane statuses,
   which was run by the status daemon.
 - Removed live tests for XML and warehouse drivers. Live data can change
   at any time without notice, causing tests to fail.

release 91.14.0